@@ -1,3 +1,8 @@
+2011-11-18  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/51150
+	* g++.dg/cpp0x/pr51150.C: New.
+
 2011-11-16  Richard Earnshaw  <rearnsha@arm.com>
 	    Bernd Schmidt <bernds@coudesourcery.com>
 	    Sebastian Huber <sebastian.huber@embedded-brains.de>
